--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
     "styled-reset": "^4.4.7",
