--- a/.vscode/.eslintrc.json
+++ b/.vscode/.eslintrc.json
@@ -1,8 +1,8 @@
 {
-	"extends": ["react-app", "react-app/jest", "naver" "prettier"],
-	"rules": {
-		"no-console": 1,
-        	"react-hooks/exhaustive-deps": 0,
-        	"no-unused-expression": false
-	}
+  "extends": ["react-app", "react-app/jest", "naver", "prettier"],
+  "rules": {
+    "no-console": 1,
+    "react-hooks/exhaustive-deps": 0,
+    "no-unused-expression": false
+  }
 }
