--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.4.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "react": "^18.2.0",
+    "react-calendar": "^4.3.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
