--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://FRONTENDSCHOOL5.github.io/final-05-Mandle_mandle/",
   "name": "mandle_mandle",
   "version": "1.0.0",
   "private": true,
@@ -8,7 +9,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-calendar": "^4.3.0",
     "react-router-dom": "^6.12.1",
@@ -47,5 +47,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage":"https://FRONTENDSCHOOL5.github.io/final-05-Mandle_mandle/"
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
+  }
 }
