--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "react": "^18.2.0",
     "react-calendar": "^4.3.0",
+    "react-device-detect": "^2.2.3",
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
