[📦 Chore] netltfy 배포하기 위한 hompage설정 변경

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://FRONTENDSCHOOL5.github.io/final-05-Mandle_mandle/",
+  "homepage": "mandle-mandle.netlify.app",
   "name": "mandle_mandle",
   "version": "2.0.0",
   "private": true,
@@ -10,13 +10,14 @@
     "axios": "^1.4.0",
     "browser-image-compression": "^2.0.2",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "global": "^4.4.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-calendar": "^4.3.0",
     "react-device-detect": "^2.2.3",
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.12.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recoil": "^0.7.7",
     "recoil-persist": "^4.2.0",
     "styled-components": "^5.3.10",
