--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mandle-mandle.netlify.app/",
+  "homepage": "https://mandle-mandle.netlify.app",
   "name": "mandle_mandle",
   "version": "2.0.0",
   "private": true,
